--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="/uv/uv.bundle.js"></script>
         <script src="/uv/uv.config.js"></script>
         <script src="/baremux/index.js"></script>
+        <script type="module" src="/src/main.js" defer></script>
 
         <script>
         if ("serviceWorker" in navigator) {
@@ -19,6 +20,5 @@
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/main.js"></script>
     </body>
 </html>
